# probstructs

./: .gitignore  .readthedocs.yaml  .travis.yml  CLAUDE.md  CMakeLists.txt  Makefile  README.md  README.rst
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build.yml  ci.yml  dependabot-approve-updates.yml  test.yml
benchmark_results/ci/: 2026-05-29_04-25-08.json  2026-05-29_07-18-37.json  2026-05-29_07-25-38.json  2026-05-29_07-33-11.json  2026-05-29_07-36-45.json  2026-05-29_08-00-09.json  2026-05-29_08-01-07.json  2026-05-29_08-11-08.json  2026-05-29_09-09-09.json  2026-05-29_09-09-46.json
benchmarks/: CMakeLists.txt  probstructs_benchmark.cpp
docs/: CMakeLists.txt  benchmarks.rst  classes.rst  conf.py  index.rst  requirements.txt
probstructs/: CMakeLists.txt  probstructs.h
scripts/: bench_check_regression.py  bench_compare.sh  bench_run.sh
src/: CMakeLists.txt  prob_structs.cpp  prob_structs.h  probstructs.h
tests/: CMakeLists.txt  gtest_main.cpp  prob_structs_unittest.cpp  probstructs_unittest.cpp
